# giddy

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.txt  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  api.html  codecov.yml  environment.yml  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  readthedocs.yml  references.html  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_tests.txt  search.html  searchindex.js  setup.py  tutorial.html
.github/workflows/: build_docs.yml  release_and_publish.yml  tests.yml  unittests.yml
_downloads/a4f325ff771069e8492daf4d52f33d69/: giddy-directional-Rose-1.py
_modules/: index.html
_modules/giddy/: directional.html  ergodic.html  markov.html  mobility.html  rank.html  sequence.html  util.html
_sources/notebooks/: DirectionalLISA.ipynb.txt  Sequence.ipynb.txt
_static/: documentation_options.js
ci/: 310-DEV.yaml  310-DEV_shapely_dev.yaml  310-latest.yaml  310-oldest.yaml  310.yaml  311-DEV.yaml  311-latest.yaml  311.yaml  312-dev.yaml  312-latest.yaml  36-GIT.yaml  36-PYPI.yaml  37-GIT.yaml  37-PYPI.yaml  37.yaml  38-GIT.yaml  38-PYPI.yaml  38.yaml  39-GIT.yaml  39-MIN.yaml  39-PYPI.yaml  39-oldest.yaml
doc/: Makefile  MobilityMeasures.nblink  RankBasedMethods.nblink  api.rst  bibliography.rst  conf.py  index.rst  installation.rst  reference.rst  tutorial.rst
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/doctrees/auto_examples/: index.doctree  plot_directional.doctree  plot_markov.doctree  plot_markov_based_methods.doctree  plot_rank_based_methods.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/_build/html/_downloads/: plot_directional.ipynb  plot_markov.ipynb  plot_rank_based_methods.ipynb  plot_rank_based_methods.py
doc/_build/html/_sources/: index.rst.txt
doc/_build/html/_sources/auto_examples/: index.rst.txt  plot_directional.rst.txt  plot_markov_based_methods.rst.txt
doc/_build/html/auto_examples/: index.html  plot_directional.html  plot_markov.html  plot_markov_based_methods.html  plot_rank_based_methods.html
doc/_static/: pysal-styles.css  references.bib  style.css
doc/auto_examples/: index.rst  plot_directional.py  plot_directional.py.md5  plot_markov.py  plot_markov.py.md5  plot_markov.rst  plot_markov_based_methods.ipynb  plot_markov_based_methods.py  plot_markov_based_methods.py.md5  plot_rank_based_methods.py.md5  plot_rank_based_methods.rst
doc/notebooks/: MarkovBasedMethods.ipynb  Rank_Markov.ipynb  RankbasedMethods.ipynb
doc/source/: directional.rst  ergodic.rst  giddy.rst  markov.rst  mobility.rst  modules.rst  rank.rst  references.bib  util.rst
docs/: .buildinfo  .nblink.html  DirectionalLISA.html  DirectionalLISA.ipynb  Makefile  Markov Based Methods.html  Markov.html  MarkovBasedMethods.html  MarkovBasedMethods.ipynb  MobilityMeasures.html  RankBasedMethods.html  RankMarkov.html  RankMarkov.ipynb  Sequence.html  api.html  api.rst  conf.py  genindex.html  index.html  index.rst  installation.html  installation.rst  objects.inv  references.html  search.html  searchindex.js  tutorial.html  tutorial.rst
docs/_downloads/2238c78615257f867f8107c66e145e8b/: Markov Based Methods.ipynb
docs/_downloads/86fd15b0e634b2ea2f92cd01758f4f93/: plot_directional.ipynb
docs/_downloads/a4f325ff771069e8492daf4d52f33d69/: giddy-directional-Rose-1.py
docs/_downloads/cc39a27288f8487904bb40c7a33469d6/: plot_rank_based_methods.ipynb
docs/_downloads/d740f62e1d372ee227dbcfaba1bab821/: plot_markov_based_methods.ipynb
docs/_modules/: index.html
docs/_modules/giddy/: directional.html  ergodic.html  markov.html  mobility.html  rank.html  sequence.html  util.html
docs/_sources/: Markov.nblink.txt  MarkovBasedMethods.nblink.txt  api.rst.txt  gallery.rst.txt  index.rst.txt
docs/_sources/auto_examples/: Markov Based Methods.rst.txt  index.rst.txt  plot_directional.rst.txt  plot_markov_based_methods.rst.txt  plot_rank_based_methods.rst.txt
docs/_sources/notebooks/: Mobilitymeasures.ipynb.txt  RankbasedMethods.ipynb.txt
docs/_static/: documentation_options.js  pysal-styles.css  references.bib
docs/notebooks/: Markov Based Methods.html  MarkovBasedMethods.html  Mobility measures.html  Mobilitymeasures.html  Rank based Methods.html  RankMarkov.html  RankMarkov.ipynb  Rank_Markov.html  RankbasedMethods.html  directional.html  directional.ipynb
docsrc/: DirectionalLISA.nblink  Makefile  RankMarkov.nblink  Sequence.nblink  conf.py  index.rst  installation.rst  tutorial.rst
docsrc/_static/: references.bib
examples/: Markov Based Methods.py  README.txt  plot_directional.py
giddy/: Untitled.ipynb  __init__.py  api.py  components.py  directional.py  ergodic.py  markov.py  mobility.py  plotting.py  rank.py  sequence.py  util.py  version.py
giddy/inequality/: _indices.py  gini.py  theil.py
giddy/tests/: test_api.py  test_directional.py  test_ergodic.py  test_markov.py  test_mobility.py  test_plotting.py  test_rank.py  test_sequence.py  test_util.py
notebooks/: DirectionalLISA.html  Markov Based Methods.ipynb  MarkovBasedMethods.html  MarkovBasedMethods.ipynb  Mobility measures.ipynb  MobilityMeasures.html  MobilityMeasures.ipynb  Rank based Methods - applied to Mexico.ipynb  Rank based Methods.ipynb  RankBasedMethods.html  RankBasedMethods.ipynb  RankMarkov.html  RankMarkov.ipynb  Rank_Markov_ergodic_morecomu.ipynb  Rose.ipynb  Sequence.html  Sequence.ipynb  directional.ipynb
tools/: gitcount.ipynb  github_stats.py
