[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "giddy"
dynamic = ["version"]
maintainers = [
    {name = "Wei Kang", email = "weikang9009@gmail.com"},
]
license = {text = "BSD 3-Clause"}
description = "PySAL-giddy for exploratory spatiotemporal data analysis"
keywords = ["spatial statistics", "spatiotemporal analysis"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.9"
dependencies = [
    "esda>=2.4",
    "libpysal>=4.8",
    "quantecon>=0.7",
    "scipy>=1.8",
]

[project.urls]
Home = "https://pysal.org/giddy/"
Repository = "https://github.com/pysal/giddy"

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]
docs = [
    "nbsphinx",
    "numpydoc",
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinx_bootstrap_theme",
]
tests = [
    "codecov",
    "ipywidgets",
    "matplotlib",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "splot",
]

[tool.setuptools.packages.find]
include = [
    "giddy",
    "giddy.*",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG"]
exclude = ["giddy/tests/*", "docs/*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401"      # imported but unused
]
"giddy/{directional,ergodic,markov,rank,sequence,util}.py" = [
    "ARG002",   # Unused method argument
    "N801",     # Class name should use CapWords convention
    "N802",     # Function name should be lowercase
    "N803",     # Argument name should be lowercase
    "N806",     # Variable in function should be lowercase
]
"giddy/markov.py" = [
    "B006",     # Do not use mutable data structures for argument defaults
    "UP031",    # Use format specifiers instead of percent format
]
"giddy/{ergodic,markov,sequence}.py" = [
    "E501",     # Line too long
]


[tool.coverage.run]
source = ["./giddy"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "except ModuleNotFoundError:",
    "except ImportError",
]
ignore_errors = true
omit = ["giddy/tests/*", "docs/conf.py"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The weights matrix is not fully connected",             # libpysal
    "ignore:Objects based on the `Geometry` class will deprecated", # libpysal
    "ignore:divide by zero encountered",
    "ignore:invalid value encountered",
    "ignore:numba.generated_jit is deprecated.",                    # numba/quantecon
    "ignore:::.*quantecon.lss:19",                                  # numba/quantecon
]